# 2dwavesim

./: LICENSE.txt  README.md  setup.cfg  setup.py
.github/workflows/: python-publish.yml
2dwavesim/: 2D Waves in Rooms.ipynb  __init__.py  example_usage.py  room.py  visualization.py
