[metadata]
name = 2dwavesim
version = 1.0.0
author = Cooper Hatfield
author_email = cooperhatfield@yahoo.ca
description = Simulate waves on 2D surfaces with arbitrary shape/size!
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/codasteroid/basicpkg
project_urls =
    Bug Tracker = https://github.com/cooperhatfield/2dwavesim/issues
    repository = https://github.com/cooperhatfield/2dwavesim
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .